# pykinsol

./: CMakeLists.txt  pyproject.toml  setup.py  test1.py  test_3000.py  test_3000_new.py  test_Bratu.py  test_easy.py  test_fullkinsol.py  test_zhinuo.py
.github/workflows/: build_wheels.yml
pykinsol/: __init__.py
pykinsol.egg-info/: PKG-INFO  SOURCES.txt
pykinsol/src/: kinsol_wrapper.cpp
