[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykinsol"
version = "0.4.0"
description = "SUNDIALS KINSOL wrapper with bound constraints for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]